--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "vue": "^3.5.13",
     "vue-cookies": "^1.8.6",
     "vue-router": "^4.5.0",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue3-cookies": "^1.0.6",
+    "vue3-toastify": "^0.2.8",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
