--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,7 +7,10 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "esnext",
     "module": "esnext",
-    "types": ["node"],
+    "types": [
+      "node",
+      "vue3-toastify/global"
+    ],
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
